update library