@@ -1,13 +1,15 @@
-apply plugin: 'com.android.library'
-apply plugin: 'com.jakewharton.butterknife'
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    namespace 'com.pchmn.materialchips'
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 33
         versionCode 9
         versionName "1.0.8"
 
@@ -20,27 +22,56 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    tasks.withType(JavaCompile).configureEach{
+        options.fork = true
+        options.forkOptions.jvmArgs +=[
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+    }
+    lintOptions {
+        disable 'GradleDependency', 'ExpiringTargetSdkVersion'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:25.3.0'
 
     // recycler
-    compile 'com.android.support:recyclerview-v7:25.3.0'
-    compile 'com.beloo.widget:ChipsLayoutManager:0.3.7@aar'
+    implementation 'com.android.support:recyclerview-v7:25.3.0'
+    implementation 'com.github.BelooS:ChipsLayoutManager:v0.3.7'
 
     // circle image view
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-
-    // butter knife
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 }
 
-apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.pchmn'
+
+afterEvaluate {
+    publishing {
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/drdream-space/nachos")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("PASSWORD")
+                }
+            }
+        }
+        publications {
+            release(MavenPublication) {
+                from components.findByName('release')
+                groupId = "dream-space"
+                artifactId = "dreamspace.MaterialChipsInput"
+                version = "1.2"
+            }
+        }
+    }
+}
+
+
